--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,25 +1,8 @@
-<h1>Listing items</h1>
+<div id="app"></div>
 
-<table>
-  <tr>
-    <th>Title</th>
-    <th>Completed</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @items.each do |item| %>
-  <tr>
-    <td><%= item.title %></td>
-    <td><%= item.completed %></td>
-    <td><%= link_to 'Show', item %></td>
-    <td><%= link_to 'Edit', edit_item_path(item) %></td>
-    <td><%= link_to 'Destroy', item, confirm: 'Are you sure?', method: :delete %></td>
-  </tr>
-<% end %>
-</table>
-
-<br />
-
-<%= link_to 'New Item', new_item_path %>
+<script type="text/javascript" charset="utf-8">
+    jQuery(function(){
+        // onready, instantiate App
+          new App({el: $("#app")})
+          });
+        </script>
