--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,7 +10,8 @@
  *
  *= require_self
  *= require_tree .
-*/
+ *= require bootstrap_and_overrides
+ */
 .stack > *:not(.active) {
   display: none;
 }}
