--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,15 +1,23 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = @item.class -%>
+<h1><%=t '.title', :default => model_class.model_name.human %></h1>
 
 <p>
-  <b>Title:</b>
+  <strong><%= model_class.human_attribute_name(:title) %>:</strong><br>
   <%= @item.title %>
 </p>
-
 <p>
-  <b>Completed:</b>
+  <strong><%= model_class.human_attribute_name(:completed) %>:</strong><br>
   <%= @item.completed %>
 </p>
 
-
-<%= link_to 'Edit', edit_item_path(@item) %> |
-<%= link_to 'Back', items_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              items_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_item_path(@item), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              item_path(@item),
+              :method => 'delete',
+              :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')),
+              :class => 'btn btn-danger' %>
+</div>
