Styles items control

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -28,7 +28,24 @@ body { padding-top: 60px; }
 // Example:
 // @linkColor: #ff0000;
 
-.item-actions{
-  float: right;
-  margin-right: 5px;
- }
+.item{
+  .item-title{
+    width: 200px;
+    display: inline-block;
+    border: 1px solid #CCC;
+    height: 18px;
+    padding: 4px;
+    margin-right: -3px;
+    margin-top: 4px;
+    margin-left: -3px;
+    background-color: whiteSmoke;
+  }
+  .btn{
+    margin-top: -3px;
+  }
+  .item-delete-btn{
+    display: none;
+    padding-top: 6px;
+    padding-bottom: 5px;
+  }
+}
