Creates new items inline

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -35,17 +35,20 @@ body { padding-top: 60px; }
     border: 1px solid #CCC;
     height: 18px;
     padding: 4px;
-    margin-right: -3px;
     margin-top: 4px;
-    margin-left: -3px;
     background-color: whiteSmoke;
   }
   .btn{
     margin-top: -3px;
+    margin-right: -4px !important;
+    margin-left: -4px !important;
   }
   .item-delete-btn{
     display: none;
     padding-top: 6px;
     padding-bottom: 5px;
+  }
+  input{
+    margin-top: 6px;
   }
 }
